--- a/index.html
+++ b/index.html
@@ -1,91 +1,144 @@
 <!DOCTYPE html>
 <html lang="uk">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Автосервіс Онлайн</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background: #121212;
-      color: #f0f0f0;
-    }
-    header {
-      background: #000;
-      padding: 1rem;
-      text-align: center;
-      font-size: 1.5rem;
-      font-weight: bold;
-    }
-    nav {
-      display: flex;
-      background: #222;
-    }
-    nav button {
-      flex: 1;
-      padding: 1rem;
-      border: none;
-      background: #222;
-      color: #fff;
-      cursor: pointer;
-      font-weight: bold;
-    }
-    nav button.active {
-      background: #000;
-      border-bottom: 3px solid #fff;
-    }
-    section {
-      display: none;
-      padding: 1rem 2rem;
-    }
-    section.active {
-      display: block;
-    }
-    form {
-      display: grid;
-      gap: 1rem;
-      margin-bottom: 1rem;
-    }
-    input, textarea {
-      padding: 0.5rem;
-      background: #1e1e1e;
-      color: #fff;
-      border: 1px solid #555;
-      border-radius: 4px;
-    }
-    button.submit {
-      background: #000;
-      border: 1px solid #fff;
-      color: #fff;
-      padding: 0.75rem;
-      font-weight: bold;
-      cursor: pointer;
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-    }
-    th, td {
-      padding: 0.75rem;
-      border: 1px solid #444;
-      text-align: left;
-    }
-    th {
-      background: #1a1a1a;
-    }
-  </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Автосервіс - Приклад стилю RemOnline</title>
+<style>
+  body {
+    margin: 0; padding: 0;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    background: #f7f9fc;
+    color: #222;
+  }
+  header {
+    background: #2e86de;
+    color: white;
+    padding: 1.2rem 2rem;
+    font-size: 1.8rem;
+    font-weight: 600;
+  }
+  nav {
+    display: flex;
+    background: white;
+    box-shadow: 0 2px 5px rgb(0 0 0 / 0.1);
+  }
+  nav button {
+    flex: 1;
+    border: none;
+    background: transparent;
+    padding: 1rem;
+    font-weight: 600;
+    font-size: 1.1rem;
+    cursor: pointer;
+    color: #666;
+    border-bottom: 3px solid transparent;
+    transition: all 0.3s ease;
+  }
+  nav button.active {
+    color: #2e86de;
+    border-bottom: 3px solid #2e86de;
+  }
+  main {
+    padding: 2rem;
+    max-width: 900px;
+    margin: auto;
+  }
+  section {
+    display: none;
+  }
+  section.active {
+    display: block;
+  }
+  form {
+    display: grid;
+    gap: 1rem;
+    margin-bottom: 2rem;
+  }
+  input, textarea {
+    padding: 0.7rem 1rem;
+    font-size: 1rem;
+    border: 1px solid #ddd;
+    border-radius: 6px;
+    background: white;
+    color: #222;
+    resize: vertical;
+  }
+  button.submit {
+    background: #2e86de;
+    color: white;
+    font-weight: 700;
+    border: none;
+    padding: 0.7rem 1.5rem;
+    border-radius: 6px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+  button.submit:hover {
+    background: #1b4f72;
+  }
+  table {
+    width: 100%;
+    border-collapse: collapse;
+  }
+  th, td {
+    padding: 0.8rem 1rem;
+    border-bottom: 1px solid #eee;
+    text-align: left;
+  }
+  th {
+    background: #f1f5f9;
+    font-weight: 700;
+    color: #555;
+  }
+  td button.delete {
+    background: #e74c3c;
+    color: white;
+    border: none;
+    padding: 0.3rem 0.7rem;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 0.85rem;
+    transition: background-color 0.3s ease;
+  }
+  td button.delete:hover {
+    background: #c0392b;
+  }
+  .actions {
+    margin-bottom: 2rem;
+  }
+  .actions button {
+    background: #2e86de;
+    color: white;
+    border: none;
+    padding: 0.6rem 1.2rem;
+    margin-right: 0.7rem;
+    border-radius: 6px;
+    font-weight: 600;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+  .actions button:hover {
+    background: #1b4f72;
+  }
+</style>
 </head>
 <body>
-  <header>Автосервіс Онлайн</header>
-  <nav>
-    <button class="tab active" data-tab="clients">Клієнти</button>
-    <button class="tab" data-tab="invoices">Рахунки</button>
-    <button class="tab" data-tab="acts">Акти</button>
-  </nav>
 
+<header>Автосервіс Онлайн</header>
+
+<nav>
+  <button class="tab active" data-tab="clients">Клієнти</button>
+  <button class="tab" data-tab="invoices">Рахунки</button>
+  <button class="tab" data-tab="acts">Акти</button>
+</nav>
+
+<main>
   <section id="clients" class="active">
-    <h2>Клієнти</h2>
+    <div class="actions">
+      <button id="importClientsBtn">Імпорт клієнтів</button>
+      <button id="exportClientsBtn">Експорт клієнтів</button>
+    </div>
     <form id="clientForm">
       <input type="text" id="clientName" placeholder="Ім'я клієнта" required />
       <input type="tel" id="clientPhone" placeholder="Телефон" />
@@ -93,31 +146,39 @@
     </form>
     <table>
       <thead>
-        <tr><th>Ім'я</th><th>Телефон</th></tr>
+        <tr><th>Ім'я</th><th>Телефон</th><th>Видалити</th></tr>
       </thead>
       <tbody id="clientList"></tbody>
     </table>
   </section>
 
   <section id="invoices">
-    <h2>Рахунки</h2>
+    <div class="actions">
+      <button id="importInvoicesBtn">Імпорт рахунків</button>
+      <button id="exportInvoicesBtn">Експорт рахунків</button>
+      <button id="printInvoicesBtn">Друк</button>
+    </div>
     <form id="invoiceForm">
       <input type="text" id="invoiceClient" placeholder="Ім'я клієнта" required />
       <input type="text" id="invoiceCar" placeholder="Авто" required />
       <textarea id="invoiceWork" placeholder="Роботи" required></textarea>
-      <input type="number" id="invoicePrice" placeholder="Ціна, грн" required />
+      <input type="number" id="invoicePrice" placeholder="Ціна, грн" required min="0" step="0.01" />
       <button type="submit" class="submit">Додати рахунок</button>
     </form>
     <table>
       <thead>
-        <tr><th>Клієнт</th><th>Авто</th><th>Роботи</th><th>Ціна</th></tr>
+        <tr><th>Клієнт</th><th>Авто</th><th>Роботи</th><th>Ціна</th><th>Видалити</th></tr>
       </thead>
       <tbody id="invoiceList"></tbody>
     </table>
   </section>
 
   <section id="acts">
-    <h2>Акти виконаних робіт</h2>
+    <div class="actions">
+      <button id="importActsBtn">Імпорт актів</button>
+      <button id="exportActsBtn">Експорт актів</button>
+      <button id="printActsBtn">Друк</button>
+    </div>
     <form id="actForm">
       <input type="text" id="actClient" placeholder="Ім'я клієнта" required />
       <input type="text" id="actCar" placeholder="Авто" required />
@@ -126,17 +187,20 @@
     </form>
     <table>
       <thead>
-        <tr><th>Клієнт</th><th>Авто</th><th>Роботи</th></tr>
+        <tr><th>Клієнт</th><th>Авто</th><th>Роботи</th><th>Видалити</th></tr>
       </thead>
       <tbody id="actList"></tbody>
     </table>
   </section>
+</main>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 <script>
-  // Вкладки
-  const tabs = document.querySelectorAll('.tab');
-  const sections = document.querySelectorAll('section');
+  const { jsPDF } = window.jspdf;
 
+  // Вкладки
+  const tabs = document.querySelectorAll('nav button.tab');
+  const sections = document.querySelectorAll('main section');
   tabs.forEach(tab => {
     tab.addEventListener('click', () => {
       tabs.forEach(t => t.classList.remove('active'));
@@ -146,82 +210,190 @@
     });
   });
 
-  // Дані
+  // Дані в localStorage
   let clients = JSON.parse(localStorage.getItem('clients') || '[]');
   let invoices = JSON.parse(localStorage.getItem('invoices') || '[]');
   let acts = JSON.parse(localStorage.getItem('acts') || '[]');
 
-  // Рендер таблиць
+  // Рендер функції
   function renderClients() {
     const tbody = document.getElementById('clientList');
     tbody.innerHTML = '';
-    clients.forEach(client => {
-      const row = document.createElement('tr');
-      row.innerHTML = `<td>${client.name}</td><td>${client.phone}</td>`;
-      tbody.appendChild(row);
+    clients.forEach((c, i) => {
+      const tr = document.createElement('tr');
+      tr.innerHTML = `<td>${c.name}</td><td>${c.phone}</td><td><button class="delete" data-index="${i}" data-type="client">×</button></td>`;
+      tbody.appendChild(tr);
     });
   }
 
   function renderInvoices() {
     const tbody = document.getElementById('invoiceList');
     tbody.innerHTML = '';
-    invoices.forEach(inv => {
-      const row = document.createElement('tr');
-      row.innerHTML = `<td>${inv.client}</td><td>${inv.car}</td><td>${inv.work}</td><td>${inv.price}</td>`;
-      tbody.appendChild(row);
+    invoices.forEach((inv, i) => {
+      const tr = document.createElement('tr');
+      tr.innerHTML = `<td>${inv.client}</td><td>${inv.car}</td><td>${inv.work}</td><td>${inv.price}</td><td><button class="delete" data-index="${i}" data-type="invoice">×</button></td>`;
+      tbody.appendChild(tr);
     });
   }
 
   function renderActs() {
     const tbody = document.getElementById('actList');
     tbody.innerHTML = '';
-    acts.forEach(act => {
-      const row = document.createElement('tr');
-      row.innerHTML = `<td>${act.client}</td><td>${act.car}</td><td>${act.work}</td>`;
-      tbody.appendChild(row);
+    acts.forEach((act, i) => {
+      const tr = document.createElement('tr');
+      tr.innerHTML = `<td>${act.client}</td><td>${act.car}</td><td>${act.work}</td><td><button class="delete" data-index="${i}" data-type="act">×</button></td>`;
+      tbody.appendChild(tr);
     });
   }
 
-  // Форма: Клієнти
+  // Додати клієнта
   document.getElementById('clientForm').addEventListener('submit', e => {
     e.preventDefault();
-    const name = document.getElementById('clientName').value;
-    const phone = document.getElementById('clientPhone').value;
-    clients.push({ name, phone });
+    const name = document.getElementById('clientName').value.trim();
+    const phone = document.getElementById('clientPhone').value.trim();
+    if(!name) return alert('Введіть ім\'я клієнта');
+    clients.push({name, phone});
     localStorage.setItem('clients', JSON.stringify(clients));
     renderClients();
     e.target.reset();
   });
 
-  // Форма: Рахунки
+  // Додати рахунок
   document.getElementById('invoiceForm').addEventListener('submit', e => {
     e.preventDefault();
-    const client = document.getElementById('invoiceClient').value;
-    const car = document.getElementById('invoiceCar').value;
-    const work = document.getElementById('invoiceWork').value;
-    const price = document.getElementById('invoicePrice').value;
-    invoices.push({ client, car, work, price });
+    const client = document.getElementById('invoiceClient').value.trim();
+    const car = document.getElementById('invoiceCar').value.trim();
+    const work = document.getElementById('invoiceWork').value.trim();
+    const price = parseFloat(document.getElementById('invoicePrice').value);
+    if(!client || !car || !work || isNaN(price)) return alert('Заповніть всі поля правильно');
+    invoices.push({client, car, work, price: price.toFixed(2)});
     localStorage.setItem('invoices', JSON.stringify(invoices));
     renderInvoices();
     e.target.reset();
   });
 
-  // Форма: Акти
+  // Додати акт
   document.getElementById('actForm').addEventListener('submit', e => {
     e.preventDefault();
-    const client = document.getElementById('actClient').value;
-    const car = document.getElementById('actCar').value;
-    const work = document.getElementById('actWork').value;
-    acts.push({ client, car, work });
+    const client = document.getElementById('actClient').value.trim();
+    const car = document.getElementById('actCar').value.trim();
+    const work = document.getElementById('actWork').value.trim();
+    if(!client || !car || !work) return alert('Заповніть всі поля');
+    acts.push({client, car, work});
     localStorage.setItem('acts', JSON.stringify(acts));
     renderActs();
     e.target.reset();
   });
 
-  // Початковий рендер
+  // Видалення
+  document.body.addEventListener('click', e => {
+    if(e.target.classList.contains('delete')){
+      const i = parseInt(e.target.dataset.index);
+      const type = e.target.dataset.type;
+      if(confirm('Ви впевнені, що хочете видалити?')){
+        if(type === 'client'){
+          clients.splice(i,1);
+          localStorage.setItem('clients', JSON.stringify(clients));
+          renderClients();
+        } else if(type === 'invoice'){
+          invoices.splice(i,1);
+          localStorage.setItem('invoices', JSON.stringify(invoices));
+          renderInvoices();
+        } else if(type === 'act'){
+          acts.splice(i,1);
+          localStorage.setItem('acts', JSON.stringify(acts));
+          renderActs();
+        }
+      }
+    }
+  });
+
+  // Імпорт / Експорт JSON
+  function downloadJSON(data, filename){
+    const blob = new Blob([JSON.stringify(data, null, 2)], {type:"application/json"});
+    const url = URL.createObjectURL(blob);
+    const a = document.createElement('a');
+    a.href = url; a.download = filename;
+    a.click();
+    URL.revokeObjectURL(url);
+  }
+  function uploadJSON(callback){
+    const input = document.createElement('input');
+    input.type = 'file';
+    input.accept = '.json,application/json';
+    input.onchange = () => {
+      if(input.files.length > 0){
+        const file = input.files[0];
+        const reader = new FileReader();
+        reader.onload = () => {
+          try {
+            const json = JSON.parse(reader.result);
+            callback(json);
+          } catch {
+            alert('Некоректний JSON файл');
+          }
+        }
+        reader.readAsText(file);
+      }
+    };
+    input.click();
+  }
+
+  // Кнопки Імпорту/Експорту
+
+  document.getElementById('exportClientsBtn').onclick = () => downloadJSON(clients, 'clients.json');
+  document.getElementById('exportInvoicesBtn').onclick = () => downloadJSON(invoices, 'invoices.json');
+  document.getElementById('exportActsBtn').onclick = () => downloadJSON(acts, 'acts.json');
+
+  document.getElementById('importClientsBtn').onclick = () => uploadJSON(data => {
+    if(Array.isArray(data)) {
+      clients = data;
+      localStorage.setItem('clients', JSON.stringify(clients));
+      renderClients();
+    } else alert('JSON повинен бути масивом об\'єктів');
+  });
+  document.getElementById('importInvoicesBtn').onclick = () => uploadJSON(data => {
+    if(Array.isArray(data)) {
+      invoices = data;
+      localStorage.setItem('invoices', JSON.stringify(invoices));
+      renderInvoices();
+    } else alert('JSON повинен бути масивом об\'єктів');
+  });
+  document.getElementById('importActsBtn').onclick = () => uploadJSON(data => {
+    if(Array.isArray(data)) {
+      acts = data;
+      localStorage.setItem('acts', JSON.stringify(acts));
+      renderActs();
+    } else alert('JSON повинен бути масивом об\'єктів');
+  });
+
+  // Друк (просто відкриває print)
+  document.getElementById('printInvoicesBtn').onclick = () => {
+    const printContent = document.getElementById('invoiceList').outerHTML;
+    const newWin = window.open('', '', 'width=800,height=600');
+    newWin.document.write('<html><head><title>Друк рахунків</title></head><body>');
+    newWin.document.write('<h1>Рахунки</h1>');
+    newWin.document.write(printContent);
+    newWin.document.write('</body></html>');
+    newWin.document.close();
+    newWin.print();
+  };
+  document.getElementById('printActsBtn').onclick = () => {
+    const printContent = document.getElementById('actList').outerHTML;
+    const newWin = window.open('', '', 'width=800,height=600');
+    newWin.document.write('<html><head><title>Друк актів</title></head><body>');
+    newWin.document.write('<h1>Акти виконаних робіт</h1>');
+    newWin.document.write(printContent);
+    newWin.document.write('</body></html>');
+    newWin.document.close();
+    newWin.print();
+  };
+
+  // Рендер при старті
   renderClients();
   renderInvoices();
   renderActs();
 </script>
+
 </body>
 </html>
